# bazel-qt-example

./: .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  bazel-bazel-qt-example  bazel-bin  bazel-out  bazel-testlogs  main_window.cpp  main_window.h
Procrastination(1, 1)/: README.md
TaskManager(1, 2)/: main.cpp
labs/lab1/procrastination/: BUILD.bazel  README.md  main.cpp  main_window.cpp  main_window.h
labs/lab1/taskmanager/: BUILD.bazel
labs/lab2/raycaster/: BUILD.bazel  canvas.cpp  canvas.h  controller.cpp  controller.h  main.cpp  main_window.cpp  main_window.h  polygon.cpp  polygon.h  ray.cpp  ray.h
