load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")

qt_cc_library(
    name = "main_window_lib",
    srcs = ["main_window.cpp"],
    hdrs = ["main_window.h"],      
    deps = ["@rules_qt//:qt_widgets"],
)

qt_cc_binary(
    name = "taskmanager",
    srcs = ["main.cpp"],
    deps = [
        ":main_window_lib",
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_widgets",
    ],
)