load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")

qt_cc_library(
    name = "raycaster_lib",
    srcs = [
        "main_window.cpp",
        "canvas.cpp",
        "controller.cpp",
        "polygon.cpp",
        "ray.cpp",
    ],
    hdrs = [
        "main_window.h",
        "canvas.h",
        "controller.h",
        "polygon.h",
        "ray.h",
    ],      
    deps = [
        "@rules_qt//:qt_widgets",
        "@rules_qt//:qt_gui",
        "@rules_qt//:qt_core",
    ],
)

qt_cc_binary(
    name = "basics",
    srcs = ["main.cpp"],
    deps = [
        ":raycaster_lib",
        "@rules_qt//:qt_core",
        "@rules_qt//:qt_widgets",
        "@rules_qt//:qt_gui",
    ],
)